# air-quality-and-temperature

./: .gitignore  Cargo.toml  README.md  flake.nix  rust-toolchain.env
.cargo/: .global-cache  config.toml
src/: aht21.rs  dht11.rs  main.rs  mq135.rs  utils.rs
src/ens160_plus_aht21/: aht21.rs  mod.rs
