[package]
name = "rusty"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-dht-rs = { version = "0.4.0", features = ["dht11"] }

embedded-hal = "1.0.0"
esp-backtrace = { version = "0.14.2", features = [
    "esp32",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "1.0.0-beta.0", features = [ "esp32", "log", "unstable" ] }
esp-println = { version = "0.12.0", features = ["esp32", "log"] }
log = { version = "0.4.22" }


# [dev-dependencies]
# pretty_assertions = "1"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
