[package]
name = "rusty"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.9.0"
embedded-graphics = "0.8.1"
embedded-hal = "1.0.0"
embedded-hal-bus = "0.3.0"
esp-backtrace = { version = "0.14.2", optional = true}
esp-hal = { version = "1.0.0-beta.0", optional = true}
esp-println = { version = "0.12.0", optional = true}
log = { version = "0.4.22" }
micromath = "2.1.0"
ssd1306 = "0.10.0"

[dependencies.ens160]
version = "0.6"
default-features = false

[target.'cfg(target_arch = "xtensa")'.dependencies]
esp-backtrace = { version = "0.14.2", features = [
    "esp32",
    "exception-handler",
    "panic-handler",
    "println",
]}
esp-hal = { version = "1.0.0-beta.0", features = [ "esp32", "log", "unstable" ] }
esp-println = { version = "0.12.0", features = ["esp32", "log"] }

# [dev-dependencies]
# embedded-hal-mock = "0.11.1"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
