[package]
name = "rusty"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-graphics = "0.8.1"
embedded-hal = "1.0.0"
embedded-hal-bus = { version = "0.3.0", features = ["async", "portable-atomic"] }
embedded-io = { version = "0.6.1" }
embedded-io-async = { version = "0.6.1"}
embedded-hal-async = "1.0.0"

esp-backtrace = { version = "0.14.2", features = [
    "esp32",
    "exception-handler",
    "panic-handler",
    "println",
]}
esp-hal-embassy  = { version = "0.7.0",  features = [
    "esp32",
    "log",
] }
esp-hal = { version = "1.0.0-beta.0", features = [ "esp32", "log", "unstable" ] }
esp-println = { version = "0.12.0", features = ["esp32", "log"] }
esp-alloc = { version = "0.7.0"}
esp-wifi = { version = "0.13.0", features = [
    "builtin-scheduler",
    "ble",
    "esp-alloc",
    "log",
    "esp32",
] }

bleps = { git = "https://github.com/bjoernQ/bleps", package = "bleps", rev = "a5148d8ae679e021b78f53fd33afb8bb35d0b62e", features = [ "macros", "async"] }

embassy-executor = { version = "0.7.0",  features = [
    "task-arena-size-20480",
    "log",
] }
embassy-time = "0.4.0"
embassy-sync = "0.6.2"

bitflags = "2.9.0"
log = { version = "0.4.22" }
micromath = "2.1.0"
ssd1306 = "0.10.0"
critical-section = "1.2.0"
static_cell = { version = "2.1.0", features = ["nightly"] }



[dependencies.ens160]
version = "0.6"
default-features = false
# features = ["async"]

[profile.dev.package.esp-wifi]
opt-level = 3

# [dev-dependencies]
# embedded-hal-mock = "0.11.1"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
